<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <import type="com.deeshop.login.HomeActivity"/>
        <variable
            name="homeActivity"
            type="HomeActivity"/>
    </data>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/shouye_bg"
        tools:context="com.deeshop.MainActivity">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAllCaps="false"
            android:textColor="@color/black_1_c"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.103" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="@dimen/margin_22px"
            android:gravity="center"
            android:text="@string/introduction"
            android:textColor="@color/gray_58_c"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.013" />


        <Button
            android:id="@+id/home_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_56px"
            android:layout_marginLeft="@dimen/margin_28px"
            android:layout_marginRight="@dimen/margin_28px"
            android:background="@mipmap/login_btn"
            android:onClick="@{homeActivity.onClick}"
            android:textAllCaps="false"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_32px"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/home_register_btn"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/home_register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_56px"
            android:layout_marginLeft="@dimen/margin_28px"
            android:background="@mipmap/signup_btn"
            android:onClick="@{homeActivity.onClick}"
            android:text="@string/register"
            android:textColor="@color/black_1_c"
            android:textSize="@dimen/text_32px"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

    </android.support.constraint.ConstraintLayout>
</layout>