<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="android.view.View"/>
        <import type="com.deeshop.login.PwdActivity"/>
        <import type="com.deeshop.bean.Password"/>
        <variable
            name="pwdActivity"
            type="PwdActivity"/>
        <variable
            name="pwd"
            type="Password"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_f6_c"
        tools:context="com.deeshop.MainActivity">

        <include
            layout="@layout/actionbar_base"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/include" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="105dp"
            android:layout_height="48dp"
            android:layout_marginLeft="@dimen/margin_28px"
            android:layout_marginStart="@dimen/margin_28px"
            android:layout_marginTop="@dimen/margin_74px"
            android:background="@android:color/white"
            android:gravity="center_vertical|start"
            android:padding="@dimen/margin_24px"
            android:text="@string/verify"
            android:textColor="@color/black_1_c"
            android:textSize="@dimen/text_30px"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include" />

        <EditText
            android:id="@+id/pwd_phone_et"
            android:layout_width="242dp"
            android:layout_height="48dp"
            android:background="@android:color/white"
            android:ems="10"
            android:hint="@string/verify_tip"
            android:inputType="number"
            android:text="@={pwd.verifyCode}"
            android:textColor="@color/black_1_c"
            android:textColorHint="@color/gray_b7_c"
            android:textCursorDrawable="@mipmap/input_wenzi_tishixian"
            android:textSize="@dimen/text_30px"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@+id/textView3"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="105dp"
            android:layout_height="48dp"
            android:layout_marginLeft="@dimen/margin_28px"
            android:layout_marginTop="@dimen/margin_20px"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:padding="@dimen/margin_24px"
            android:text="@string/password"
            android:textColor="@color/black_1_c"
            android:textSize="@dimen/text_30px"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:layout_marginStart="@dimen/margin_28px" />

        <EditText
            android:id="@+id/pwd_pwd_et"
            android:layout_width="242dp"
            android:layout_height="48dp"
            android:background="@android:color/white"
            android:ems="10"
            android:hint="@string/password_tip"
            android:inputType="textPassword|numberPassword"
            android:text="@={pwd.password}"
            android:textColor="@color/black_1_c"
            android:textColorHint="@color/gray_b7_c"
            android:textCursorDrawable="@mipmap/input_wenzi_tishixian"
            android:textSize="@dimen/text_30px"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
            app:layout_constraintLeft_toRightOf="@+id/textView6" />

        <Button
            android:id="@+id/pwd_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_40px"
            android:background="@drawable/background_login"
            android:gravity="center"
            android:textAllCaps="false"
            android:text="@string/done"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_32px"
            android:enabled="@{pwd.enabled}"
            android:onClick="@{pwdActivity.onClick}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pwd_pwd_et" />

        <ImageView
            android:id="@+id/pwd_clear_phone_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:padding="@dimen/margin_24px"
            android:onClick="@{pwdActivity.onClick}"
            android:visibility="@{pwd.verifyCode.get().length() !=0 ? View.VISIBLE : View.GONE}"
            app:layout_constraintRight_toLeftOf="@+id/pwd_get_verify_tv"
            app:layout_constraintTop_toTopOf="@+id/pwd_phone_et"
            app:srcCompat="@mipmap/login_input_icon_quxiao"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/pwd_clear_pwd_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:padding="@dimen/margin_24px"
            android:onClick="@{pwdActivity.onClick}"
            android:visibility="@{pwd.password.get().length() !=0 ? View.VISIBLE : View.GONE}"
            app:layout_constraintRight_toRightOf="@+id/pwd_pwd_et"
            app:layout_constraintTop_toTopOf="@+id/pwd_pwd_et"
            app:srcCompat="@mipmap/login_input_icon_quxiao"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/pwd_get_verify_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_24px"
            android:layout_marginTop="@dimen/margin_24px"
            android:background="@drawable/background_verify"
            android:gravity="center"
            android:text="@string/get_verify"
            android:textColor="@color/red_primary_c"
            android:textSize="12sp"
            android:onClick="@{pwdActivity.onClick}"
            app:layout_constraintRight_toRightOf="@+id/pwd_phone_et"
            app:layout_constraintTop_toTopOf="@+id/pwd_phone_et" />

    </android.support.constraint.ConstraintLayout>
</layout>

