<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="android.view.View"/>
        <import type="com.deeshop.login.LoginActivity"/>
        <import type="com.deeshop.bean.Login"/>
        <variable
            name="loginActivity"
            type="LoginActivity"/>
        <variable
            name="login"
            type="Login"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_f6_c"
        tools:context="com.deeshop.MainActivity">

        <include
            android:id="@+id/include_login"
            layout="@layout/actionbar_base"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="105dp"
            android:layout_height="48dp"
            android:layout_marginLeft="@dimen/margin_28px"
            android:layout_marginTop="@dimen/margin_74px"
            android:background="@android:color/white"
            android:gravity="center_vertical|start"
            android:padding="@dimen/margin_24px"
            android:text="@string/phone_num"
            android:textColor="@color/black_1_c"
            android:textSize="@dimen/text_30px"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include_login"
            android:layout_marginStart="@dimen/margin_28px"/>

        <EditText
            android:id="@+id/login_phone_et"
            android:layout_width="242dp"
            android:layout_height="48dp"
            android:layout_marginRight="@dimen/margin_28px"
            android:background="@android:color/white"
            android:ems="10"
            android:hint="@string/phone_num_tip"
            android:inputType="phone"
            android:text="@={login.phoneNum}"
            android:textColor="@color/black_1_c"
            android:textColorHint="@color/gray_b7_c"
            android:textCursorDrawable="@mipmap/input_wenzi_tishixian"
            android:textSize="@dimen/text_30px"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@+id/textView3"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="105dp"
            android:layout_height="48dp"
            android:layout_marginLeft="@dimen/margin_28px"
            android:layout_marginTop="@dimen/margin_20px"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:padding="@dimen/margin_24px"
            android:text="@string/password"
            android:textColor="@color/black_1_c"
            android:textSize="@dimen/text_30px"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:layout_marginStart="@dimen/margin_28px" />

        <EditText
            android:id="@+id/login_pwd_et"
            android:layout_width="242dp"
            android:layout_height="48dp"
            android:layout_marginRight="@dimen/margin_28px"
            android:background="@android:color/white"
            android:ems="10"
            android:hint="@string/password_tip"
            android:inputType="numberPassword"
            android:text="@={login.password}"
            android:textColor="@color/black_1_c"
            android:textColorHint="@color/gray_b7_c"
            android:textCursorDrawable="@mipmap/input_wenzi_tishixian"
            android:textSize="@dimen/text_30px"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
            app:layout_constraintLeft_toRightOf="@+id/textView6" />

        <TextView
            android:id="@+id/login_forget_pwd_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_28px"
            android:layout_marginTop="@dimen/margin_26px"
            android:text="@string/forget_pwd_tip"
            android:textColor="@color/gray_8_c"
            android:textSize="@dimen/text_26px"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_pwd_et"
            android:layout_marginEnd="@dimen/margin_28px"
            android:onClick="@{loginActivity.onClick}"/>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_40px"
            android:background="@drawable/background_login"
            android:enabled="@{login.enabled}"
            android:gravity="center"
            android:onClick="@{loginActivity.onClick}"
            android:textAllCaps="false"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_32px"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_forget_pwd_tv" />

        <ImageView
            android:id="@+id/login_clear_phone_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:padding="@dimen/margin_24px"
            android:visibility="@{login.phoneNum.get().length() != 0 ? View.VISIBLE : View.GONE}"
            android:onClick="@{loginActivity.onClick}"
            app:layout_constraintRight_toRightOf="@+id/login_phone_et"
            app:layout_constraintTop_toTopOf="@+id/login_phone_et"
            app:srcCompat="@mipmap/login_input_icon_quxiao"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/login_clear_pwd_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:padding="@dimen/margin_24px"
            android:visibility="@{login.password.get().length() != 0 ? View.VISIBLE : View.GONE}"
            android:onClick="@{loginActivity.onClick}"
            app:layout_constraintRight_toRightOf="@+id/login_pwd_et"
            app:layout_constraintTop_toTopOf="@+id/login_pwd_et"
            app:srcCompat="@mipmap/login_input_icon_quxiao"
            tools:visibility="visible"
            android:layout_marginRight="0dp" />

    </android.support.constraint.ConstraintLayout>
</layout>

