<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data >
        <import type="android.view.View"/>
        <import type="com.deeshop.bean.Pop"/>
        <import type="com.deeshop.SearchActivity"/>
        <variable
            name="pop"
            type="Pop"/>
        <variable
            name="activity"
            type="SearchActivity"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_90px"
            android:layout_marginTop="@dimen/margin_40px"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/margin_20px"
            android:paddingRight="@dimen/margin_20px">

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_18px"
                app:srcCompat="@mipmap/icon_sousuo" />

            <EditText
                android:id="@+id/search_et"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:ems="10"
                android:hint="@string/search_input_tip"
                android:inputType="textPersonName"
                android:afterTextChanged="@{activity.afterTextChanged}"
                android:text="@={pop.string1}"
                android:textColor="@color/black_1_c"
                android:textColorHint="@color/gray_b7_c"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/search_clear_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_26px"
                android:onClick="@{activity::onClick}"
                android:visibility="@{pop.string1.length() > 0 ? View.VISIBLE : View.GONE}"
                app:srcCompat="@mipmap/sousuo_input_icon_quxiao" />

            <View
                android:layout_width="1dp"
                android:layout_height="@dimen/margin_38px"
                android:background="@color/gray_de_c" />

            <TextView
                android:id="@+id/search_cancel_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/margin_26px"
                android:onClick="@{activity::onClick}"
                android:text="@string/cancel"
                android:textColor="@color/black_1_c"
                android:textSize="@dimen/text_32px" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_1px"
            android:background="@color/gray_de_c" />

        <LinearLayout
            android:id="@+id/search_history_ll"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_78px"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/margin_28px"
                android:text="@string/history"
                android:textColor="@color/gray_8_c"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/search_clear_history_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_20px"
                android:onClick="@{activity::onClick}"
                android:text="@string/clear_all"
                android:textColor="@color/gray_8_c"
                android:textSize="12sp" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/search_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</layout>
